--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "ipasspay/sdk-cn",
-    "description": "ipasspay sdk zh-cn",
+    "name": "ipasspay/sdk-en",
+    "description": "ipasspay sdk en-us",
     "keywords": [
         "ipasspay",
         "sdk"
